# crpg-rle

./: .gitignore  README.md  pyproject.toml  pytest.ini
bridge_mod/: INSTALL.md
corpora/act1_demo/: corpus.json
corpora/act1_v1/: corpus.json
crpg_rle/: __init__.py
crpg_rle/adapters/: __init__.py
crpg_rle/core/: __init__.py  bridge.py  capture.py  env.py  env_server.py  launcher.py  modes.py  reward.py  rng.py  spaces.py
crpg_rle/puffer/: __init__.py  run_env_server.py
crpg_rle/train/: __init__.py  buffer.py  grpo.py  observer.py  policy.py  ppo.py  proxy_env.py  train.py
docs/: DOD.md  RLE-ROADMAP.md
games/: README.md
games/crossy_chicken/: README.md  __init__.py  calibrate.py  env.py  evaluate.py  seeds.py  train_crossy.py  watch.py
games/tyranny/: tyranny_rle_build_brief.md
pipeline/: _common.py  build_corpus.py  extract_options.py  make_demo_corpus.py  paraphrase.py  tag_options.py  verify_tags.py
projectlogs/: a29fae3b-d611-4249-ae66-199dae68b184.jsonl
projectlogs/memory/: MEMORY.md  authorship-user-only.md  crpg-rle-project.md  workflow-small-commits-cheap-subagents.md
tests/integration/: test_live_acceptance.py  test_live_build_lock.py
tests/unit/: test_adapter_reset.py  test_bridge.py  test_build_lock.py  test_build_spec.py  test_capture.py  test_config_driver.py  test_core_purity.py  test_crossy_calibrate.py  test_crossy_chicken.py  test_crossy_eval.py  test_crossy_reward_hacking.py  test_dialogue_pipeline.py  test_env_server.py  (+11 more)
tools/: dashboard.py  decompile_notes.md  record_session.py  rl_rollout.py  session_recording.jsonl
(+57 files in other folders)
